--- a/css/products.css
+++ b/css/products.css
@@ -143,7 +143,7 @@ nav a:hover {
 
 .products-hero {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("productBack.jpg") center/cover;
+    url("Images/productBack.jpg") center/cover;
   color: white;
   text-align: center;
   padding: 100px 20px;
@@ -332,7 +332,7 @@ nav a:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../images/footerBack.jpg");
+  background-image: url("images/footerBack.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
