--- a/css/products.css
+++ b/css/products.css
@@ -332,7 +332,7 @@ nav a:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("Images/footerBack.jpg");
+  background-image: url("../Images/footerBack.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
